--- a/Pitch Perfect/Base.lproj/Main.storyboard
+++ b/Pitch Perfect/Base.lproj/Main.storyboard
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="fBg-7w-x7u">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Record-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="RecordSoundsViewController" customModule="Pitch_Perfect" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +18,230 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cN4-vk-LaL" userLabel="btnRecord">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" image="Mic"/>
+                                <connections>
+                                    <action selector="recordAudio:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vt5-aH-abu"/>
+                                </connections>
+                            </button>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Vq-HN-jez" userLabel="btnStop">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" image="Stop"/>
+                                <connections>
+                                    <action selector="stopRecording:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9X0-ox-ycM"/>
+                                </connections>
+                            </button>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recording" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7F4-0d-L2f">
+                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="7Vq-HN-jez" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="2A1-6X-RQy"/>
+                            <constraint firstItem="7Vq-HN-jez" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="62h-8B-0KQ"/>
+                            <constraint firstItem="cN4-vk-LaL" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="BFZ-Ng-YrQ"/>
+                            <constraint firstItem="7F4-0d-L2f" firstAttribute="top" secondItem="cN4-vk-LaL" secondAttribute="bottom" constant="21" id="bPA-Am-ibK"/>
+                            <constraint firstItem="cN4-vk-LaL" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cxW-ia-tQJ"/>
+                            <constraint firstItem="7F4-0d-L2f" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="quV-BS-2I7"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="cN4-vk-LaL"/>
+                                <exclude reference="7Vq-HN-jez"/>
+                                <exclude reference="7F4-0d-L2f"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="2A1-6X-RQy"/>
+                                <exclude reference="62h-8B-0KQ"/>
+                                <exclude reference="BFZ-Ng-YrQ"/>
+                                <exclude reference="cxW-ia-tQJ"/>
+                                <exclude reference="bPA-Am-ibK"/>
+                                <exclude reference="quV-BS-2I7"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="cN4-vk-LaL"/>
+                                <include reference="7Vq-HN-jez"/>
+                                <include reference="7F4-0d-L2f"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="2A1-6X-RQy"/>
+                                <include reference="62h-8B-0KQ"/>
+                                <include reference="BFZ-Ng-YrQ"/>
+                                <include reference="cxW-ia-tQJ"/>
+                                <include reference="bPA-Am-ibK"/>
+                                <include reference="quV-BS-2I7"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <navigationItem key="navigationItem" title="Record" id="dbc-BV-dA2"/>
+                    <connections>
+                        <outlet property="btnStop" destination="7Vq-HN-jez" id="G0G-2r-IiE"/>
+                        <outlet property="lblRecording" destination="7F4-0d-L2f" id="fyR-s6-AJo"/>
+                        <outlet property="recordButton" destination="cN4-vk-LaL" id="xNa-EI-7Rl"/>
+                        <segue destination="tbM-jm-AWe" kind="show" identifier="stopRecording" id="ZDr-qr-gSu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1732.5" y="630"/>
+        </scene>
+        <!--Play Sounds View Controller-->
+        <scene sceneID="Pjl-Jo-0qP">
+            <objects>
+                <viewController id="tbM-jm-AWe" customClass="PlaySoundsViewController" customModule="Pitch_Perfect" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="oHt-r8-aHk"/>
+                        <viewControllerLayoutGuide type="bottom" id="jA1-wH-xis"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="tcq-HZ-Ba6">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hJ6-yu-jbV" userLabel="Slow">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <rect key="contentStretch" x="0.0" y="0.0" width="0.34999999999999998" height="0.40000000000000002"/>
+                                <state key="normal" image="Snail"/>
+                                <connections>
+                                    <action selector="playSoundSlow:" destination="tbM-jm-AWe" eventType="touchUpInside" id="sHX-p8-zS9"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dIn-vf-2N5" userLabel="Fast">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" image="Fast"/>
+                                <connections>
+                                    <action selector="playSoundFast:" destination="tbM-jm-AWe" eventType="touchUpInside" id="Gmh-SF-L7O"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7LO-7c-Zwm">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" image="Chipmunk"/>
+                                <connections>
+                                    <action selector="playChipmunkAudio:" destination="tbM-jm-AWe" eventType="touchUpInside" id="P1Y-6W-7C7"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rge-vg-7Z4">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" image="Monster"/>
+                                <connections>
+                                    <action selector="playMonsterAudio:" destination="tbM-jm-AWe" eventType="touchUpInside" id="R1b-St-d54"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nDC-ud-MtJ" userLabel="Stop">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="170" id="0ND-o5-zEY"/>
+                                </constraints>
+                                <state key="normal" image="Stop"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="0ND-o5-zEY"/>
+                                    </mask>
+                                </variation>
+                                <variation key="widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="0ND-o5-zEY"/>
+                                    </mask>
+                                </variation>
+                                <connections>
+                                    <action selector="playStop:" destination="tbM-jm-AWe" eventType="touchUpInside" id="hl2-0E-YsH"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="hJ6-yu-jbV" firstAttribute="leading" secondItem="tcq-HZ-Ba6" secondAttribute="leadingMargin" constant="30" id="B8Y-3R-Qzx"/>
+                            <constraint firstItem="dIn-vf-2N5" firstAttribute="top" secondItem="oHt-r8-aHk" secondAttribute="bottom" constant="44" id="DDS-YY-iX9"/>
+                            <constraint firstItem="nDC-ud-MtJ" firstAttribute="centerX" secondItem="tcq-HZ-Ba6" secondAttribute="centerX" id="DR9-oa-CRU">
+                                <variation key="widthClass=compact" constant="6"/>
+                            </constraint>
+                            <constraint firstItem="jA1-wH-xis" firstAttribute="top" secondItem="nDC-ud-MtJ" secondAttribute="bottom" constant="8" id="Igf-J6-NHW"/>
+                            <constraint firstItem="hJ6-yu-jbV" firstAttribute="top" secondItem="oHt-r8-aHk" secondAttribute="bottom" constant="44" id="Pfe-eE-feJ"/>
+                            <constraint firstItem="7LO-7c-Zwm" firstAttribute="top" secondItem="hJ6-yu-jbV" secondAttribute="bottom" constant="50" id="RPZ-9d-icU"/>
+                            <constraint firstItem="rge-vg-7Z4" firstAttribute="top" secondItem="dIn-vf-2N5" secondAttribute="bottom" constant="50" id="TK0-LY-Hwg"/>
+                            <constraint firstItem="7LO-7c-Zwm" firstAttribute="leading" secondItem="tcq-HZ-Ba6" secondAttribute="leadingMargin" constant="30" id="kZ4-Xh-Efp"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="rge-vg-7Z4" secondAttribute="trailing" constant="30" id="u6l-fL-wUA"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="dIn-vf-2N5" secondAttribute="trailing" constant="30" id="w3O-z9-22H"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="hJ6-yu-jbV"/>
+                                <exclude reference="dIn-vf-2N5"/>
+                                <exclude reference="7LO-7c-Zwm"/>
+                                <exclude reference="rge-vg-7Z4"/>
+                                <exclude reference="nDC-ud-MtJ"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="Igf-J6-NHW"/>
+                                <exclude reference="RPZ-9d-icU"/>
+                                <exclude reference="kZ4-Xh-Efp"/>
+                                <exclude reference="DDS-YY-iX9"/>
+                                <exclude reference="w3O-z9-22H"/>
+                                <exclude reference="B8Y-3R-Qzx"/>
+                                <exclude reference="Pfe-eE-feJ"/>
+                                <exclude reference="DR9-oa-CRU"/>
+                                <exclude reference="TK0-LY-Hwg"/>
+                                <exclude reference="u6l-fL-wUA"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="hJ6-yu-jbV"/>
+                                <include reference="dIn-vf-2N5"/>
+                                <include reference="7LO-7c-Zwm"/>
+                                <include reference="rge-vg-7Z4"/>
+                                <include reference="nDC-ud-MtJ"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="Igf-J6-NHW"/>
+                                <include reference="RPZ-9d-icU"/>
+                                <include reference="kZ4-Xh-Efp"/>
+                                <include reference="DDS-YY-iX9"/>
+                                <include reference="w3O-z9-22H"/>
+                                <include reference="B8Y-3R-Qzx"/>
+                                <include reference="Pfe-eE-feJ"/>
+                                <include reference="DR9-oa-CRU"/>
+                                <include reference="TK0-LY-Hwg"/>
+                                <include reference="u6l-fL-wUA"/>
+                            </mask>
+                        </variation>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XBK-20-OY5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2478" y="630"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Pye-bX-nNE">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="fBg-7w-x7u" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="KlK-JG-maH">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="56Q-Wo-tGa"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Jqa-P7-kLx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="885" y="631"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Chipmunk" width="100" height="100"/>
+        <image name="Fast" width="100" height="100"/>
+        <image name="Mic" width="170" height="170"/>
+        <image name="Monster" width="100" height="100"/>
+        <image name="Snail" width="100" height="100"/>
+        <image name="Stop" width="50" height="50"/>
+    </resources>
 </document>
